correction of css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation></app-navigation>
-<div class="container-fluid mainframe">
+<div class="container-fluid mainframe" role="main">
  <router-outlet></router-outlet>
 </div>
