--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,24 +1,14 @@
-<div class="row justify-content-md-center justify-content-sm-center">
-  <div class="col-xs-12 col-sm-8 col-md-4">
-    <div class="card">
-      <div class="card-body text-center">
-        <form (ngSubmit)="onSignup(f)" #f="ngForm">
-          <div><h6>Bitte keine echte Daten eingeben!</h6></div>
-          <div class="form-group">
-            <label class="card-text" for="name">Name</label>
-            <input class="form-control" type="name" id="name" name="name" ngModel required>
-          </div>
-          <div class="form-group">
-            <label class="card-text" for="email">E-Mail</label>
-            <input class="form-control" type="email" id="email" name="email" ngModel required>
-          </div>
-          <div class="form-group">
-            <label class="card-text" for="password">Passwort</label>
-            <input class="form-control" type="password" id="password" name="password" ngModel required>
-          </div>
-          <button class="btn btn-primary" type="submit">Registrieren</button>
-        </form>
+<div class="row text-center justify-content-md-center">
+  <div class="col-xs-12 col-sm-6 col-md-2 vertical-center">
+    <form (ngSubmit)="onSignup(f)" #f="ngForm">
+      <h2>Bitte registrieren</h2>
+      <div class="form-group">
+        <input class="form-control" type="text" id="name" name="name" placeholder="Name" ngModel>
+        <input class="form-control" type="email" id="email" name="email" placeholder="E-Mail-Adresse" ngModel>
+        <input class="form-control" type="password" id="password" name="password" placeholder="Passwort" ngModel>
+        <small class="text-muted">Bitte kein echte Daten eingeben!</small>
       </div>
-    </div>
+      <button class="btn btn-primary btn-block" type="submit">Registrieren</button>
+    </form>
   </div>
 </div>
