--- a/src/app/stars/stars-nav/stars-nav.component.html
+++ b/src/app/stars/stars-nav/stars-nav.component.html
@@ -3,7 +3,7 @@
                                              (keyup)="filterStarList()" #searchFilter></div>
   <div class="col-md-4">
     <div class="btn-group btn-block" dropdown>
-      <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-info dropdown-toggle"
+      <button id="button-basic" dropdownToggle type="button" class="btn btn-info dropdown-toggle"
               aria-controls="dropdown-basic">
         Sortieren <span class="caret"></span>
       </button>
