--- a/src/app/stars/stars-welcome/stars-welcome.component.html
+++ b/src/app/stars/stars-welcome/stars-welcome.component.html
@@ -7,8 +7,10 @@
         Daten).
         <br>
         Kein Konto? Dann sofort registrieren!(Keine echte Daten benötigt)</p>
-      <button type="button" class="btn btn-outline-primary" routerLink="/signin">Anmelden</button>
-      <button type="button" class="btn btn-outline-primary" routerLink="/signup">Registrieren</button>
+      <p>
+        <a type="button" class="btn btn-primary" routerLink="/signin">Anmelden</a> &nbsp;
+        <a type="button" class="btn btn-primary" routerLink="/signup">Registrieren</a>
+      </p>
     </div>
     <ng-template #infoBlock>
       <h6>Sie sind eingeloggt und berechtigt die Daten zu ändern. Bitte fühlen Sie sich frei, neue Sterne zu
