--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-striped">
+    <table class="table table-bordered table-striped table-hover">
       <thead>
       <tr ngc>
         <th>Name</th>
