--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,20 +1,20 @@
-<div class="row">
+<div class="row limited-height">
   <div class="col-md-4 panel-border">
     <div class="btn-group btn-block">
-      <button type="button" class="btn btn-outline-primary" (click)="onAddStar()" [disabled]="!auth.isLoggedIn()">
+      <button type="button" class="btn btn-primary" (click)="onAddStar()" [disabled]="!auth.isLoggedIn()">
         <span class="fa fa-plus-square-o"></span> Neu
       </button>
-      <button type="button" class="btn btn-outline-success" (click)="onEditStar()" [disabled]="!auth.isLoggedIn()">
+      <button type="button" class="btn btn-success" (click)="onEditStar()" [disabled]="!auth.isLoggedIn()">
         <span class="fa fa-edit"></span> Bearbeiten
       </button>
-      <button type="button" class="btn btn-outline-danger" (click)="onRemoveStar()" [disabled]="!auth.isLoggedIn()">
+      <button type="button" class="btn btn-danger" (click)="onRemoveStar()" [disabled]="!auth.isLoggedIn()">
         <span class="fa fa-minus-square-o"></span> Entfernen
       </button>
     </div>
     <hr>
     <app-stars-nav></app-stars-nav>
   </div>
-  <div class="col-md-8 limited-height">
+  <div class="col-md-8">
     <router-outlet></router-outlet>
   </div>
 </div>
