green border not applied to valid and invalid formArrays

--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -43,7 +43,7 @@
     </div>
   </div>
   <hr>
-  <div formArrayName="planets">
+  <div class="planetForm" formArrayName="planets">
     <div><h5 class="inline-header">Umkreisende Planeten:</h5>
       <span><button type="button" class="btn btn-primary btn-sm" (click)="onAddNewPlanet()"> Neu + </button></span>
     </div>
