--- a/src/app/stars/star-add/star-add.component.css
+++ b/src/app/stars/star-add/star-add.component.css
@@ -1,8 +1,8 @@
-.ng-valid.ng-dirty:not(form)  {
+.ng-valid.ng-dirty:not(form):not(.planetForm)  {
   border-left: 5px solid #42A948; /* green */
 }
 
-.ng-invalid:not(form)  {
+.ng-invalid:not(form):not(.planetForm)  {
   border-left: 5px solid #a94442; /* red */
 }
 
