--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -84,6 +84,7 @@
             <input type="text" class="form-control" formControlName="planetESI" id="planetESI">
           </div>
         </div>
+        <button class="btn btn-danger" type="button" (click)="removePlanetForm(planetFormGroup)">Entfernen</button>
       </div>
     </div>
   </div>
