--- a/src/app/stars/stars.component.css
+++ b/src/app/stars/stars.component.css
@@ -7,3 +7,12 @@
   max-height: calc(100vh - 5rem);
   overflow-y: auto;
 }
+
+.fixed-height-row {
+  display: block;
+  overflow-y: auto;
+  height: calc(100vh - 12.5rem) ;
+  max-height: calc(100vh - 12.5rem);
+  /*scrollbar-width: none;
+  -ms-overflow-style: none;*/
+}
