--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -15,6 +15,8 @@
     <app-stars-nav></app-stars-nav>
   </div>
   <div class="col-md-8">
-    <router-outlet></router-outlet>
+    <div class="row fixed-height-row">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
