--- a/src/app/stars/stars.component.css
+++ b/src/app/stars/stars.component.css
@@ -8,7 +8,7 @@
   overflow-y: auto;
 }
 
-.fixed-height-row {
+.fixed-height-col {
   display: block;
   overflow-y: auto;
   height: calc(100vh - 12.5rem) ;
