--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -14,9 +14,7 @@
     <hr>
     <app-stars-nav></app-stars-nav>
   </div>
-  <div class="col-md-8">
-    <div class="row fixed-height-row">
-      <router-outlet></router-outlet>
-    </div>
+  <div class="col-md-8 fixed-height-col">
+    <router-outlet></router-outlet>
   </div>
 </div>
