--- a/src/app/stars/star-add/star-add.component.css
+++ b/src/app/stars/star-add/star-add.component.css
@@ -1,25 +1,28 @@
-.ng-valid.ng-dirty:not(form):not(.planetForm)  {
+.ng-valid.ng-dirty:not(form):not(.planetForm):not(card) {
   border-left: 5px solid #42A948; /* green */
 }
 
-.ng-invalid:not(form):not(.planetForm)  {
+.ng-invalid:not(form):not(.planetForm):not(card) {
   border-left: 5px solid #a94442; /* red */
 }
 
-.inline-header{
+.inline-header {
   display: inline-block;
 }
 
 .card {
   margin-bottom: 2px;
 }
-.comment-light{
+
+.comment-light {
   color: grey;
 }
-.help-right{
+
+.help-right {
   float: right;
   color: red;
 }
-.label-block{
+
+.label-block {
   display: block;
 }
