--- a/src/app/stars/star-edit/star-edit.component.css
+++ b/src/app/stars/star-edit/star-edit.component.css
@@ -1,11 +1,10 @@
-.ng-valid.ng-dirty:not(form):not(.planetForm)  {
+.ng-valid.ng-dirty:not(form):not(.planetForm):not(card) {
   border-left: 5px solid #42A948; /* green */
 }
 
-.ng-invalid:not(form):not(.planetForm)  {
+.ng-invalid:not(form):not(.planetForm):not(card) {
   border-left: 5px solid #a94442; /* red */
 }
-
 
 .inline-header {
   display: inline-block;
