--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light text-dark">
+<div class="card bg-light text-dark padding-bottom">
   <div class="card-header"><h3>{{selectedStar.name}}</h3></div>
   <div class="card-body">
     <table class="table table-borderless table-hover">
