--- a/src/app/stars/star-edit/star-edit.component.css
+++ b/src/app/stars/star-edit/star-edit.component.css
@@ -1,8 +1,8 @@
-.ng-valid.ng-dirty:not(form):not(.planetForm):not(card) {
+.ng-valid.ng-dirty:not(form):not(.planetForm):not(.card) {
   border-left: 5px solid #42A948; /* green */
 }
 
-.ng-invalid:not(form):not(.planetForm):not(card) {
+.ng-invalid:not(form):not(.planetForm):not(.card) {
   border-left: 5px solid #a94442; /* red */
 }
 
@@ -25,4 +25,8 @@
 
 .label-block {
   display: block;
+}
+
+.padding-bottom {
+  padding-bottom: 1rem;
 }
