--- a/src/app/stars/stars-nav/stars-nav.component.html
+++ b/src/app/stars/stars-nav/stars-nav.component.html
@@ -9,9 +9,9 @@
       </button>
       <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
           role="menu" aria-labelledby="button-basic">
-        <li role="menuitem" (click)="sortList('name')"><a class="dropdown-item">Name</a></li>
-        <li role="menuitem" (click)="sortList('distance')"><a class="dropdown-item">Entfernung</a></li>
-        <li role="menuitem" (click)="sortList('mass')"><a class="dropdown-item">Masse</a></li>
+        <li role="menuitem" (click)="sortList('name')"><a class="dropdown-item cursor-pointer">Name</a></li>
+        <li role="menuitem" (click)="sortList('distance')"><a class="dropdown-item cursor-pointer">Entfernung</a></li>
+        <li role="menuitem" (click)="sortList('mass')"><a class="dropdown-item cursor-pointer">Masse</a></li>
       </ul>
     </div>
   </div>
