--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,17 +1,8 @@
 <div class="row justify-content-md-center justify-content-sm-center">
-  <div class="col-md-4 vertical-center text-center">
-    <h4>Dein Profil</h4>
-    <table class="table table-borderless">
-      <tbody>
-      <tr>
-        <td class=".font-weight-bold">Name:</td>
-        <td>{{ details?.name }}</td>
-      </tr>
-      <tr>
-        <td class=".font-weight-bold">E-Mail:</td>
-        <td>{{ details?.email }}</td>
-      </tr>
-      </tbody>
-    </table>
+  <div class="col-sm-6 col-md-4 vertical-center ">
+    <h3>Mein Profil</h3>
+    <hr>
+    <p><span class="font-weight-bold">Name: </span>{{ details?.name }}</p>
+    <p><span class="font-weight-bold">E-Mail-Adresse: </span>{{ details?.email }}</p>
   </div>
 </div>
