added a home component to be displayed at root. added some css to it. corrected the css in other components accordingly. added a confirmation to the remove button.

--- a/src/app/stars/stars-welcome/stars-welcome.component.html
+++ b/src/app/stars/stars-welcome/stars-welcome.component.html
@@ -2,8 +2,9 @@
   <div class="col-sm-10 col-md-8 text-center vertical-center">
     <div *ngIf="!auth.isLoggedIn();else infoBlock">
       <h4>Willkommen zum Sternkatalog!</h4>
-      <p>Als Gast können Sie keine Daten ändern.
-        Um die Daten zu bearbeiten melden Sie sich bitte an(Mail: test@testmail.de, Passwort: passwort oder mit eigenen
+      <p>Als Gast können Sie sich die Daten der Sterne nur anschauen.
+        Clicken Sie auf einen Titel in der Liste rechts, um die Daten anzuzeigen.
+        Um die Daten zu bearbeiten, melden Sie sich bitte an(Mail: test@testmail.de, Passwort: passwort oder mit eigenen
         Daten).
         <br>
         Kein Konto? Dann sofort registrieren!(Keine echte Daten benötigt)</p>
