added some info buttons with href to the code in github

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,3 +6,6 @@
     <p class="vertical-center light-shadow-text">Anmelden/Registrien</p>
   </div>
 </div>
+<a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
+   class="btn btn-info btn-circle absolute-position" tooltip="Zum Code dieser Seite"><span
+  class="fa fa-question"></span></a>
