--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -26,3 +26,7 @@
     </table>
   </div>
 </div>
+<a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/planets"
+   class="btn btn-info btn-circle absolute-position"><span class="fa fa-question"
+                                                           tooltip="Zum Code dieser Seite"></span></a>
+
