--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -18,3 +18,7 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+<a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/stars"
+   class="btn btn-info btn-circle absolute-position"><span class="fa fa-question"
+                                                           tooltip="Zum Code dieser Seite"></span></a>
+
