--- a/src/app/stars/stars.component.css
+++ b/src/app/stars/stars.component.css
@@ -17,3 +17,9 @@
   /*scrollbar-width: none;
   -ms-overflow-style: none;*/
 }
+
+.box-shadow{
+  -webkit-box-shadow: 0 8px 6px -6px #999;
+  -moz-box-shadow: 0 8px 6px -6px #999;
+  box-shadow: 0 8px 6px -6px #999;
+}
