--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,6 +1,6 @@
 <div class="row limited-height">
   <div class="col-md-4 panel-border">
-    <div class="btn-group btn-block">
+    <div class="btn-group btn-block box-shadow" tooltip="Nicht angemeldet!" [isDisabled]="auth.isLoggedIn()">
       <button type="button" class="btn btn-primary" (click)="onAddStar()" [disabled]="!auth.isLoggedIn()">
         <span class="fa fa-plus-square-o"></span> Neu
       </button>
