--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-sm-12 col-md-6  text-center full-height no-padding" id="guest-access" routerLink="/stars">
-    <p class="vertical-center light-shadow-text">Als Gast entdecken</p>
+  <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
+    <p class="vertical-center glow">Als Gast entdecken</p>
   </div>
-  <div class="col-sm-12 col-md-6 text-center full-height no-padding" id="user-access" routerLink="/signin">
-    <p class="vertical-center light-shadow-text">Anmelden/Registrien</p>
+  <div class="col-sm-12 col-md-6 text-center full-height gray-filter" id="user-access" routerLink="/signin">
+    <p class="vertical-center glow">Anmelden/Registrien</p>
   </div>
 </div>
 <a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
