--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -10,13 +10,23 @@ a {
   background-color: #203a46;
 }
 
-.active{
-  border-bottom: 5px solid #42A948;
-}
-
 .navbar{
   padding-bottom: 0 !important;
   -webkit-box-shadow: 0 8px 6px -6px #999;
   -moz-box-shadow: 0 8px 6px -6px #999;
   box-shadow: 0 8px 6px -6px #999;
+}
+
+.nav-item{
+  display: inline-block;
+  border-bottom: 5px solid #203a46;
+}
+
+.navbar-brand{
+  display: inline-block;
+  border-bottom: 8px solid #203a46;
+}
+
+.nav-item.active{
+  border-bottom: 5px solid #42A948;
 }
