--- a/src/app/stars/star-item/star-item.component.html
+++ b/src/app/stars/star-item/star-item.component.html
@@ -1,1 +1,1 @@
-<a type="button" class="card bg-secondary text-white" (click)="onShowStarDetails()">{{star.name}}</a>
+<button class="btn-block" type="button" mdbBtn color="light" mdbWavesEffect (click)="onShowStarDetails()">{{star.name}}</button>
