--- a/src/app/stars/stars-welcome/stars-welcome.component.html
+++ b/src/app/stars/stars-welcome/stars-welcome.component.html
@@ -9,8 +9,8 @@
         <br>
         Kein Konto? Dann sofort registrieren!(Keine echte Daten benötigt)</p>
       <p>
-        <a type="button" class="btn btn-primary" routerLink="/signin">Anmelden</a> &nbsp;
-        <a type="button" class="btn btn-primary" routerLink="/signup">Registrieren</a>
+        <button type="button" mdbBtn color="primary" mdbWavesEffect routerLink="/signin">Anmelden</button> &nbsp;
+        <button type="button" mdbBtn color="primary" mdbWavesEffect routerLink="/signup">Registrieren</button>
       </p>
     </div>
     <ng-template #infoBlock>
