fixed some tooltips

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,7 +8,7 @@
         <input class="form-control" type="password" id="password" name="password" placeholder="Passwort" ngModel>
         <small class="text-muted">Bitte kein echte Daten eingeben!</small>
       </div>
-      <button class="btn btn-primary btn-block" type="submit">Registrieren</button>
+      <button mdbBtn color="primary" mdbWavesEffect type="submit">Registrieren</button>
     </form>
   </div>
 </div>
