--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -43,12 +43,12 @@
 
 div:hover > .glow {
   text-shadow: 0 0 5px #fff,
-  0 0 10px #fff,
-  0 0 20px #fff,
-  0 0 40px #ffd633,
-  0 0 80px #ffd633,
-  0 0 90px #ffd633,
-  0 0 100px #ffd633,
-  0 0 150px #ffd633,
+  0 0 10px #fffae6,
+  0 0 20px #fff5cc,
+  0 0 40px #fff0b3,
+  0 0 80px #ffeb99,
+  0 0 90px #ffe680,
+  0 0 100px #ffe066,
+  0 0 150px #ffdb4d,
   0 0 200px #ffd633;
 }
