--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -12,7 +12,7 @@
       </div>
       <hr>
       <p>Noch kein Konto? Dann hier <a routerLink="/signup">registrieren</a>.</p>
-      <button class="btn btn-primary btn-block" type="submit">Anmelden</button>
+      <button mdbBtn color="primary" mdbWavesEffect type="submit">Anmelden</button>
     </form>
   </div>
 </div>
